--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="content">
-        <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/a/macros/sts.ac.th/s/AKfycbzu7MXBjjUEMnEQ1OMy5sntEQgTMUASlOPRf2T6Dz-WljhLxWadbGFw1sCO3HWN2U-CPg/exec" />
+        <iframe src="https://script.google.com/macros/s/AKfycbzu7MXBjjUEMnEQ1OMy5sntEQgTMUASlOPRf2T6Dz-WljhLxWadbGFw1sCO3HWN2U-CPg/exec" 
+height="100%" width="100%"></iframe>
     </div>
 </body>
