--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,21 @@
-<title>Test Layout</title> <style type="text/css"> body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
-        #content
-        {
-            position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+
+
+<!DOCTYPE html>
+<html>
+   <head>
+      <base target="_top">
+      <style>
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            border: 0;
         }
-    </style>
-</head>
-<body>
-    <div id="content">
-<!-- <iframe src="https://script.google.com/macros/s/AKfycbzu7MXBjjUEMnEQ1OMy5sntEQgTMUASlOPRf2T6Dz-WljhLxWadbGFw1sCO3HWN2U-CPg/exec" 
-height="100%" width="100%"></iframe> -->
-        <iframe src="https://script.google.com/macros/s/AKfycbx3qQqmSLDbkjb-4r-M6aB7yaYdmyef0eTq_MKtGNswsSBLm4uTLCe7O4aU8hSUMLl1/exec" 
-height="100%" width="100%"></iframe>
-            
-    </div>
-</body>
+      </style>
+   </head>
+   <body>
+      <iframe src="https://script.google.com/macros/s/AKfycbx3qQqmSLDbkjb-4r-M6aB7yaYdmyef0eTq_MKtGNswsSBLm4uTLCe7O4aU8hSUMLl1/exec"></iframe>
+   </body>
+</html>
